# nordic_wellness_booker

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: CD.yml
assets/: activities.json  bookable-activities.json
infra/: .terraform.lock.hcl  main.tf
src/: main.rs
