[package]
name = "nordic_wellness_booker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
cron = "0.12.0"
cron-descriptor = "0.1.1"
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.17"
reqwest = {version = "0.11.15", features = ["blocking"]}
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
