[package]
name = "nordic_wellness_booker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["clock", "std"] }
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.17"
reqwest = { version = "0.11.15" }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
